' Generated by UML Generator
' Encoded: XLRRRjiu47ttLn1vKcefiDszjC9kKRjHDmPyoLfsWxOe0bgUbOb8f9UaacQ3_7jvaMJIThClDZayCvpBcQ7U2ucvhCgY8-u8tM6EIvGLM8YXb9oiAmdZZD6K_0UerzcI3Q2CyAo0JiUWq8Z9AwWu4P9a0Zrr48fuZ1QORbYfDq_AlZfwHhFvxNJ-ARdzE5_DBcD4g4H_egZlOPRpvN1oc_wz6YwIjC6C6EQRYtJy9K6ld8sd-26PBPD5hTae_kf3vejP2scDFw5-Y5w7wFSGlKNFda8wlaoEuOCG_HAYtqBqni8ZzTFraX1m4toJX7CDo46EGCWfkuTWhKE8RIGXMZDvNU17u9zmKO6vvzpyQkF_4Bgv8PGIci_vg62PAb5-miZEM72Ldvlw_8LBC6NfYXYb6QOKkDvvHI9PZCPqLyaFMyZk321QRsE_k5hue83A8GTM4HAZrNWbIK4a0ODodTFxNFamPHjeuxB-zcDaGz-B1gx8f5Rx7tW6GYHi66qy8JfEUIIWJgoOAMqHgCIaYj4q__fD7sSSi8GQ4TZR3N0FKnhtZ9W8jbM9wRBYDCWgplKYLfLZ1M3ge5Gj_m_JDUqMD0AlJ0dD2QsBrRAmn8G6cESd_6gLznMn3NYOVxFNBTmMmAHsh-RHoMHF4JQjIfEr8UVuSQ8uyCUOIiY1lzFA3qHdFZYacx5m448olLv-RZgevnrTJuQVLLFsczF-gTE1DoswJeD-QNlzTSy9t0tIE1ISxvTCRZLrsb2xH7oiYa97KbVB2eVtc1HuNK3wRuKv19mzrFJBMD6qseiQmloTW2fgrf1IzN89L3R4_fc6dX-cY8O2UowxPtKjldup1DVYbpptgcRRm9A7AYOwvYCYr1HmdR5vjIg1Ypx_YJn4lerc8kfsyqCnEBSIhOVkTB9-UkFiv1WoVhgAmU7WQ3ofYHsKXDQPAl5tVnQxiCFqEVTQwgj1OAQExfecFlDwdDtWeeYIin2TBGRHvK0lvZj9oaeLWPCIj61KbOf4Qp2Rg-44lUtrUdgzAYHdLA_IkqSAKgyk0NPef9uElRd1KbZ0WgrPndPdpYErKrx8KO7ftKIDcS2PIVO4yoFP5U0D78l7L4XUPP8mAexjQ2w-YD2JN4o1Lkw9OR6bH6wueoTYYE2xVdneFdDvTi3-wtPuUwgqAM0DLkNoFrOkBjxLCz8yag-Yo7y4Mwd_3BPYvo5iPIu57Ntlalg5SwRs7cJdvzupZ_U75xYyqohwXivxe1lrEVS3
' URL: http://www.plantuml.com/plantuml/uml/XLRRRjiu47ttLn1vKcefiDszjC9kKRjHDmPyoLfsWxOe0bgUbOb8f9UaacQ3_7jvaMJIThClDZayCvpBcQ7U2ucvhCgY8-u8tM6EIvGLM8YXb9oiAmdZZD6K_0UerzcI3Q2CyAo0JiUWq8Z9AwWu4P9a0Zrr48fuZ1QORbYfDq_AlZfwHhFvxNJ-ARdzE5_DBcD4g4H_egZlOPRpvN1oc_wz6YwIjC6C6EQRYtJy9K6ld8sd-26PBPD5hTae_kf3vejP2scDFw5-Y5w7wFSGlKNFda8wlaoEuOCG_HAYtqBqni8ZzTFraX1m4toJX7CDo46EGCWfkuTWhKE8RIGXMZDvNU17u9zmKO6vvzpyQkF_4Bgv8PGIci_vg62PAb5-miZEM72Ldvlw_8LBC6NfYXYb6QOKkDvvHI9PZCPqLyaFMyZk321QRsE_k5hue83A8GTM4HAZrNWbIK4a0ODodTFxNFamPHjeuxB-zcDaGz-B1gx8f5Rx7tW6GYHi66qy8JfEUIIWJgoOAMqHgCIaYj4q__fD7sSSi8GQ4TZR3N0FKnhtZ9W8jbM9wRBYDCWgplKYLfLZ1M3ge5Gj_m_JDUqMD0AlJ0dD2QsBrRAmn8G6cESd_6gLznMn3NYOVxFNBTmMmAHsh-RHoMHF4JQjIfEr8UVuSQ8uyCUOIiY1lzFA3qHdFZYacx5m448olLv-RZgevnrTJuQVLLFsczF-gTE1DoswJeD-QNlzTSy9t0tIE1ISxvTCRZLrsb2xH7oiYa97KbVB2eVtc1HuNK3wRuKv19mzrFJBMD6qseiQmloTW2fgrf1IzN89L3R4_fc6dX-cY8O2UowxPtKjldup1DVYbpptgcRRm9A7AYOwvYCYr1HmdR5vjIg1Ypx_YJn4lerc8kfsyqCnEBSIhOVkTB9-UkFiv1WoVhgAmU7WQ3ofYHsKXDQPAl5tVnQxiCFqEVTQwgj1OAQExfecFlDwdDtWeeYIin2TBGRHvK0lvZj9oaeLWPCIj61KbOf4Qp2Rg-44lUtrUdgzAYHdLA_IkqSAKgyk0NPef9uElRd1KbZ0WgrPndPdpYErKrx8KO7ftKIDcS2PIVO4yoFP5U0D78l7L4XUPP8mAexjQ2w-YD2JN4o1Lkw9OR6bH6wueoTYYE2xVdneFdDvTi3-wtPuUwgqAM0DLkNoFrOkBjxLCz8yag-Yo7y4Mwd_3BPYvo5iPIu57Ntlalg5SwRs7cJdvzupZ_U75xYyqohwXivxe1lrEVS3
' Generated on: 2025-10-23T08:33:14.433157700

@startuml
skinparam classAttributeIconSize 0
hide circle
package business #LightBlue {
  class BotHeuristics {
    -r: Random
    -{static} NO_MOVE_FOUND: int = -1
    -{static} TOTAL_SQUARES: int = Board.SIZE * Board.SIZE
    -{static} CENTER_SQUARE: int = 5
    -{static} CORNER_SQUARES: int = { 1, 3, 7, 9 }
    -{static} SIDE_SQUARES: int = { 2, 4, 6, 8 }
    --
    +BotHeuristics(random: Random)
    +getBestMove(board: Board, botPlayerValue: int): int
    -findWinningOrBlockingMove(board: Board, player: int): int
  }

  class Game {
    +s: Scanner
    +r: Random
    -ic: InputChecker
    -bh: BotHeuristics
    -wc: WinChecker
    -uii: UIUtilities
    -board: Board
    -gameMode: int
    -player1: Player
    -player2: Player
    --
    +Game(gameMode: int, scanner: Scanner, random: Random)
    -setPlayersNames(): String[]
    -createPlayers(playerNames: String[]): void
    -humanTurn(currTurn: boolean): void
    -botTurn(currTurn: boolean): void
    +start(): void
  }

  class GameEngine {
    +{static} main(args: String[]): void
  }

  class WinChecker {
    -board: Board
    -boardSize: int
    --
    +WinChecker(board: Board)
    -getSums(): ArrayList<Integer>
    +winner(): int
  }
}

package data #LightGreen {
  class Board {
    +{static} EMPTY: int = 0
    +{static} PLAYER_1: int = 1
    +{static} PLAYER_2: int = -1
    +{static} SIZE: int = 30
    -board: int
    --
    +Board()
    +Board(other: Board)
    +isFull(): boolean
    +isAvailableSquare(row: int, col: int): boolean
    +isAvailableSquare(square: int): boolean
    +setSquare(movement: int, square: int): boolean
    +getBoardString(): String
    +getBoard(): int[][]
    +getSquare(row: int, col: int): int
  }

  class Player {
    -name: String
    -isBot: boolean
    --
    +Player(name: String)
    +Player(name: String, isBot: boolean)
    +getName(): String
    +isBot(): boolean
  }
}

package ui #LightYellow {
  class InputChecker {
    -s: Scanner
    -uii: UIUtilities
    --
    +InputChecker(scanner: Scanner)
    +getInteger(min: int, max: int): int
    +getInteger(): int
  }

  class UIUtilities {
    +botsNameList: String = { "Wall-E", "R2-D2", "Optimus Prime", "Bumblebee", "HAL 9000", "Ultron", "Skynet", "Deep Blue", "Watson", "Robocop" }
    --
    +printBlankLine(): void
    +printBar(): void
    +printHeader(): void
    +printInstructions(): void
    +printBoardInstructions(): void
    +printModesMenu(): void
    +getBotName(game: Game, existingName: String): String
    +getPlayerName(game: Game, n: int): String
  }
}

' Punto de entrada de la aplicación
GameEngine ..> Game : "crea e inicia"
GameEngine ..> UIUtilities : "usa para mostrar menús"
GameEngine ..> InputChecker : "usa para leer la opción"

' La clase Game orquesta la partida
Game *-- InputChecker : "usa para validar la entrada"
Game *-- BotHeuristics : "usa para calcular la jugada del bot"
Game *-- WinChecker : "usa para determinar si hay un ganador"
Game *-- UIUtilities : "usa para operaciones de UI"
Game *-- Board : "crea y gestiona el tablero"
Game *-- Player : "crea y gestiona los jugadores"

' Otras dependencias y relaciones
BotHeuristics ..> Board : "consulta y simula para encontrar la mejor jugada"
WinChecker *-- Board : "analiza el estado para encontrar un ganador"
Board ..> Board : "se clona para simular jugadas"
InputChecker *-- UIUtilities : "usa para mostrar mensajes de error"
UIUtilities ..> Game : "accede para obtener Scanner y Random"
@enduml